--- a/data/build.gradle
+++ b/data/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
     implementation "com.google.code.gson:gson:$gsonVersion"
+    implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
 
     androidTestImplementation "androidx.test:runner:$testRunnerVersion"
     testImplementation "junit:junit:$jUnitVersion"
